# mlproject

./: pyproject.toml
artifacts/: model.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 2. MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
